reworked menu toggling. Now shift+esc toggles menu open and closed so that esc can be used only for escaping inputs in menus, also, added the stop() method before the menu animation so that it doesnt add to the stack

--- a/client/static/css/sidebar.css
+++ b/client/static/css/sidebar.css
@@ -80,6 +80,7 @@
     visibility: visible;
 }
 .chat_people_text {
+    margin-left: -100%;
     visibility: hidden;
     width: 120px;
     background-color: black;
@@ -91,6 +92,17 @@
     /* Position the tooltip */
     position: absolute;
     z-index: 1;
+
+
+    /*visibility: hidden;
+    position: absolute;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    z-index: 1;*/
 }
 
 .screenLabel {
